View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030094 | Open CASCADE | OCCT:Modeling Algorithms | public | 2018-08-30 11:27 | 2018-09-09 13:05 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030094: Modeling Algorithms - Defeaturing does not work on the attached shape due to incorrect extension of the torus | ||||
Description | Defeaturing algorithm does not work on the attached shape due to incorrect extension of the torus. | ||||
Steps To Reproduce | restore [locate_data_file bug30094.brep] a explode a f removefeatures result a a_6 | ||||
Tags | No tags attached. | ||||
Test case number | boolean/removefeatures/G3, boolean/removefeatures/G4 | ||||
|
Branch CR30094 has been created by emv. SHA-1: c4be154a8cf16a0aaa6131b6cb929c91d1111088 Detailed log of new commits: Author: emv Date: Fri Aug 31 10:17:47 2018 +0300 0030094: Modeling Algorithms - Defeaturing does not work on the attached shape due to incorrect extension of the torus BRepLib::ExtendFace method when working with analytical and periodic faces now takes into account the possible closeness of the result face. Test cases for the issue. |
|
Branch CR30094 has been updated forcibly by emv. SHA-1: 4967999df25d25df578eef2cce56d7f655600459 |
|
Dear Mikhail, could you please review the git branch CR30094? Test results - http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR30094-master-emv/view/COMPARE/. |
|
Reviewed. |
|
OCCT branch : CR30094 SHA - 4967999df25d25df578eef2cce56d7f655600459 Products branch : CR30100 SHA - 172af4d33029ab85a56ad72ea43f606b8d32245b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17570.309999999838 / 17510.19999999974 [+0.34%] Products Total CPU difference: 7473.800000000058 / 7448.370000000074 [+0.34%] Windows-64-VC14: OCCT Total CPU difference: 17478.18043889853 / 17490.31731669841 [-0.07%] Products Total CPU difference: 8335.32063119999 / 8296.913184999985 [+0.46%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30094 has been deleted by inv. SHA-1: 4967999df25d25df578eef2cce56d7f655600459 |
occt: master 82d3cd0b 2018-08-31 07:17:47
Committer: bugmaster Details Diff |
0030094: Modeling Algorithms - Defeaturing does not work on the attached shape due to incorrect extension of the torus BRepLib::ExtendFace method when working with analytical and periodic faces now takes into account the possible closeness of the result face. Test cases for the issue. |
Affected Issues 0030094 |
|
mod - src/BRepLib/BRepLib.cxx | Diff File | ||
add - tests/boolean/removefeatures/G3 | Diff File | ||
add - tests/boolean/removefeatures/G4 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-08-30 11:27 |
|
New Issue | |
2018-08-30 11:27 |
|
Assigned To | => msv |
2018-08-30 11:34 |
|
Assigned To | msv => emv |
2018-08-30 11:34 |
|
Status | new => assigned |
2018-08-30 11:34 |
|
Steps to Reproduce Updated | |
2018-08-31 08:40 |
|
Relationship added | related to 0030099 |
2018-08-31 10:22 | git | Note Added: 0078874 | |
2018-09-03 09:23 |
|
Relationship added | related to 0030100 |
2018-09-03 15:34 | git | Note Added: 0078943 | |
2018-09-04 07:35 |
|
Note Added: 0078958 | |
2018-09-04 07:35 |
|
Assigned To | emv => msv |
2018-09-04 07:35 |
|
Status | assigned => resolved |
2018-09-04 10:03 |
|
Note Added: 0078968 | |
2018-09-04 10:03 |
|
Assigned To | msv => bugmaster |
2018-09-04 10:03 |
|
Status | resolved => reviewed |
2018-09-04 15:31 | bugmaster | Status | reviewed => tested |
2018-09-04 15:32 | bugmaster | Note Added: 0078989 | |
2018-09-04 15:33 | bugmaster | Test case number | => boolean/removefeatures/G3, boolean/removefeatures/G4 |
2018-09-09 11:52 | bugmaster | Changeset attached | => occt master 82d3cd0b |
2018-09-09 11:52 | bugmaster | Status | tested => verified |
2018-09-09 11:52 | bugmaster | Resolution | open => fixed |
2018-09-09 13:05 | git | Note Added: 0079045 |