0030094: Modeling Algorithms - Defeaturing does not work on the attached shape due to incorrect extension of the torus

BRepLib::ExtendFace method when working with analytical and periodic faces now takes into account the possible closeness of the result face.
Test cases for the issue.